# SeaShell

./: .gitignore  CMakeLists.txt  README.md  functions.hpp  global.cpp  global.hpp  main.cpp  to-do.md  vcpkg-configuration.json  vcpkg.json
Data/: alias.yaml  settings.json
Libraries/: CMakeLists.txt  Libraries.md
SeaServer/: functions.hpp  helloworld.cpp  helloworld.hpp  seaserver.cpp  server.cpp
SeaServer/networking/: clientprint.cpp  clientprint.hpp  clientsend.cpp  clientsend.hpp  sendtoclient.hpp
SeaShell/: color.cpp  color.hpp  commands.hpp  common.hpp  functions.hpp  global.cpp  global.hpp  help.cpp  help.hpp  installer.cpp  platform.hpp  pocotest.cpp  pocotest.hpp  seashell.cpp  types.hpp  utils.cpp  utils.hpp
SeaShell Server/: helloworld.cpp  server.cpp
SeaShell Server/networking/: sendtoclient.cpp
SeaShell/commands/: help_command.hpp  ls_command.hpp  registry.hpp
SeaShell/files/: dll.cpp  dll.hpp  encrypt.cpp  encrypt.hpp  execute.cpp  execute.hpp  filesystem.cpp  filesystem.hpp  python.cpp  python.hpp  zip.cpp  zip.hpp
SeaShell/networking/: client.cpp  client.hpp  clientsend.cpp  clientsend.hpp  ip.cpp  ip.hpp  sql.cpp  sql.hpp  ssh.cpp  ssh.hpp
SeaShell/system/: process.cpp  process.hpp
data/: alias.yaml  past-commands.json
functions/: foobar.cpp  foobar.hpp
functions client/: functions.hpp
functions client/networking/: client.cpp  client.hpp
functions server/: helloworld.cpp  helloworld.hpp  server.cpp
functions server/networking/: sendtoclient.cpp  sendtoclient.hpp
functions/files/: execute.cpp  execute.hpp
libraries/: Libraries.md
libraries/openssl/crypto/: aes_platform.h  aria.h  asn1.h  asn1_dsa.h  asn1err.h  async.h  asyncerr.h  bioerr.h  bn.h  bn_dh.h  bn_srp.h  bnerr.h  buffererr.h  chacha.h  cmll_platform.h  cmperr.h  cmserr.h  comperr.h  conferr.h  context.h  crmferr.h  cryptlib.h  cryptoerr.h  cterr.h  ctype.h  decoder.h  decodererr.h  des_platform.h  dh.h  dherr.h  dsa.h  dsaerr.h  ec.h  ecerr.h  ecx.h  encoder.h  encodererr.h  engine.h  engineerr.h  err.h  (+43 more)
libraries/openssl/internal/: __DECC_INCLUDE_EPILOGUE.H  __DECC_INCLUDE_PROLOGUE.H  asn1.h  bio.h  bio_addr.h  bio_tfo.h  common.h  comp.h  conf.h  constant_time.h  core.h  cryptlib.h  dane.h  deprecated.h  der.h  deterministic_nonce.h  dso.h  dsoerr.h  e_os.h  endian.h  err.h  event_queue.h  ffc.h  hpke_util.h  ktls.h  list.h  namemap.h  nelem.h  numbers.h  o_dir.h  packet.h  packet_quic.h  param_build_set.h  params.h  passphrase.h  priority_queue.h  property.h  propertyerr.h  provider.h  quic_ackm.h  (+47 more)
libraries/openssl/openssl/: __DECC_INCLUDE_EPILOGUE.H  __DECC_INCLUDE_PROLOGUE.H  aes.h  asn1_mac.h  asn1err.h  async.h  asyncerr.h  bioerr.h  blowfish.h  bn.h  bnerr.h  buffer.h  buffererr.h  camellia.h  cast.h  cmac.h  cmp_util.h  cmperr.h  cmserr.h  comp.h  comperr.h  conf_api.h  conferr.h  conftypes.h  core.h  core_dispatch.h  core_object.h  crmferr.h  cryptoerr.h  cryptoerr_legacy.h  cterr.h  decoder.h  decodererr.h  des.h  dh.h  dherr.h  dsa.h  dsaerr.h  dtls1.h  e_os2.h  (+74 more)
src/: main.cpp
src/functions/: foobar.cpp  foobar.hpp
